2005-01-30  John Luke  <john.luke@gmail.com>

	* Internal/Project/Project/DotNetProject.cs: pass fileName
	to the LangaugeBinding to determine if it is compilable
	fixes bug# 71694

2005-01-28  John Luke  <john.luke@gmail.com>

	* Services/ParserService/DefaultParserService.cs:
	* Parser/IParser: use CanParse () instead of HandlesFileExtension
	to be consistent with what SD did upstream

2005-01-27  John Luke  <john.luke@gmail.com>

	* Gui/Dialogs/CommonAboutDialog.cs: use a timeout
	to make scrolling a more constant speed
	* Gui/Dialogs/SharpDevelopAboutPanels.cs: remove
	a bunch of stale code

2005-01-27  John Luke  <john.luke@gmail.com>

	* Base.glade: update to newer glade format

	* Commands/ToolsCommands.cs:
	* Commands/FileCommands.cs:
	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs:
	* Gui/Dialogs/CombineConfiguration/CombineStartupPanel.cs:
	* Gui/Dialogs/OptionPanels/IDEOptions/SelectStylePanel.cs:
	* Base.glade:
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyAttribute.cs:
	* Internal/Templates/ProjectTemplates/ProjectTemplate.cs:
	use ComboBox instead of OptioMenu and fix a bunch of little warnings

2005-01-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/ParserService/CodeCompletionDatabase.cs: Moved classes to
	their own files, which are the following:
	
	* Services/ParserService/AssemblyCodeCompletionDatabase.cs:
	* Services/ParserService/ClassEntry.cs:
	* Services/ParserService/FileEntry.cs:
	* Services/ParserService/NamespaceEntry.cs:
	* Services/ParserService/ProjectCodeCompletionDatabase.cs:
	* Services/ParserService/SimpleCodeCompletionDatabase.cs:
	* Services/ParserService/ReferenceEntry.cs: New files.

2005-01-27  Christian Hergert <chris@mosaix.net>

	* Gui/Pads/HelpBrowser/MonodocTreePad.cs: Fix to use new ShowView in
	DefaultWorkbench.

2005-01-27  John Luke  <john.luke@gmail.com>

	* Makefile.am: 
	* Services/File/RecentOpen.cs:
	* Services/File/DefaultFileService.cs: