@@ -1,3 +1,9 @@
+2005-01-31  John Luke  <john.luke@gmail.com>
+
+	* Gui/Components/SdToolbarCommand.cs:
+	* Services/Toolbar/ToolbarService.cs:
+	use newer gtk toolbar API, and simplify it a little
+
 2005-01-30  John Luke  <john.luke@gmail.com>
 
 	* Internal/Project/Project/DotNetProject.cs: pass fileName
